k8s/base-prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisland-feed-prod
  namespace: prod-ns
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wisland-feed-prod
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wisland-feed-prod
        version: v1
    spec:
      containers:
        - env:
            - name: aliyun_logs_wisland-feed-server-prod
              value: stdout
          image: >-
            crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag/wisland-feed-prod:server-20251021093417
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3500
            timeoutSeconds: 5
          name: wisland-feed-prod-server
          ports:
            - containerPort: 3500
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3500
            timeoutSeconds: 3
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: '2'
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/.env
              name: volume-wisland-feed-prod
              subPath: .env
        - env:
            - name: aliyun_logs_wisland-feed-worker-prod
              value: stdout
          image: >-
            crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag/wisland-feed-prod:worker-20251021093417
          imagePullPolicy: IfNotPresent
          name: wisland-feed-prod-worker
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 2
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app/.env
              name: volume-wisland-feed-prod
              subPath: .env
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - wisland-feed-prod
              topologyKey: kubernetes.io/hostname
          - weight: 50
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - wisland-feed-prod
              topologyKey: topology.kubernetes.io/zone
      volumes:
        - name: volume-wisland-feed-prod
          secret:
            defaultMode: 420
            secretName: wisland-feed-prod
