k8s/base-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod-ns
  name: nginx-model-prod-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp80
      port: 80
      protocol: TCP
      targetPort: 80
    - name: tcp443
      port: 443
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-model-prod
    version: v1
  sessionAffinity: None
  type: ClusterIP
